# ardudeck

./: .gitignore  auto.crt  auto.key  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: build-wfb-rx.yml
apps/desktop/: auto.crt  auto.key  package.json
apps/desktop/resources/: splash.html
apps/desktop/src/main/: index.ts  ipc-handlers.ts  preload.ts  splash-window.ts
apps/desktop/src/main/__tests__/: connection-registry.test.ts
apps/desktop/src/main/calibration/: calibration-handlers.ts  mavlink-calibration.ts
apps/desktop/src/main/connection/: connection-registry.ts  orchestration-link.ts  types.ts
apps/desktop/src/main/gis/: shapefile-to-geojson.test.ts  shapefile-to-geojson.ts
apps/desktop/src/main/link-doctor/: crsf-protocol.ts  elrs-service.ts  link-doctor.test.ts  stream-classifier.ts
apps/desktop/src/main/logs/: fleet-log-history.ts  fleet-log-summary.test.ts  fleet-log-summary.ts
apps/desktop/src/main/media/: media-binaries-downloader.ts  media-engine.ts  wfbng-dongle.test.ts  wfbng-dongle.ts  wfbng-receiver.ts  wfbng.test.ts  wfbng.ts
apps/desktop/src/main/modules/: hangar-client.ts  license-validator.ts  marketplace-client.ts  module-ipc.ts  module-manager.ts  module-registry.ts
apps/desktop/src/main/msp/: msp-peripheral-config.ts  msp-registration.ts
apps/desktop/src/main/orchestrator/: orchestrator-process.ts
apps/desktop/src/main/signing/: signing-audit-chain.test.ts  signing-audit-chain.ts  signing-audit.ts
apps/desktop/src/renderer/: App.tsx
apps/desktop/src/shared/: camera-types.ts  fleet-log-maintenance.test.ts  fleet-log-maintenance.ts  fleet-log-types.ts  ipc-channels.ts  link-doctor-types.ts  mission-group-types.ts  mission-types.ts  module-types.ts  overlay-types.ts  prearm-checks.ts  signing-audit-types.ts  sim-obstacle-types.ts  telemetry-types.test.ts  telemetry-types.ts  traffic-types.ts  user-units.test.ts  user-units.ts
apps/sim-engine/: package.json  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
apps/sim-engine/src/: fdm-server.test.ts  fdm-server.ts  index.ts  json-fdm.test.ts  json-fdm.ts  main.ts  state-ws.ts  vehicle.ts  world.test.ts  world.ts
docs/screenshots/_new/: review.html
tools/wfb-rx/: CMakeLists.txt  README.md
tools/wfb-rx/src/: gui_interface.h  main.cpp
tools/wfb-rx/src/wifi/: wfbng_link.cpp
(+325 files in other folders)
